--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   box-sizing: border-box; }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Inconsolata', monospace;
   line-height: 1.6;
   overflow: hidden; }
 
